# microrts-tournament-results-parser

./: .gitignore  CHANGELOG.md  LICENSE  MAINTENANCE.md  README.md  TODO.md  pyproject.toml
microrts_trp/: __init__.py  cli.py  tournament.py
