[project]
name = "microrts-trp"
requires-python = ">=3.8"
description = "Parse and display MicroRTS' tournament.csv file."
readme = "README.md"
license = { text = "MIT License" }
dependencies = [
    "tabulate",
    "pandas[performance,parquet,feather,plot,output-formatting]",
    'importlib-metadata; python_version>="3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "microrts_trp.__version__" }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "interest: marks tests as interested (deselect with '-m \"not interest\"')",
]
