[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microrts-trp"
requires-python = ">=3.10"
description = "Parse and display MicroRTS' tournament.csv file."
readme = "README.md"
license = { text = "MIT License" }
dependencies = [
    "click",
    "tabulate",
    "pandas[performance,parquet,feather,plot,output-formatting]",
    'importlib-metadata; python_version>="3.10"',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
typ = ["mypy", " types-tabulate"]

[tool.setuptools]
packages = ["microrts_trp"]

[tool.setuptools.dynamic]
version = { attr = "microrts_trp.__version__" }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "interest: marks tests as interested (deselect with '-m \"not interest\"')",
]
